[profile.release]
debug = true

[package]
name = "rust-concurrency"
version = "0.1.0"
edition = "2021"

[dependencies]
bytemuck = { version = "1.21.0", features = ["derive"] }
cgmath = "0.18.0"
egui = "0.31.0"
egui-wgpu = { version = "0.31.0", features = ["winit", "x11", "wayland"] }
egui-winit = "0.31.0"
fastnoise-lite = "1.1.1"
image = "0.25.5"
log = "0.4.25"
noise = "0.9.0"
pollster = "0.4.0"
pretty_env_logger = "0.5.0"
rand = "0.9.0"
wgpu = "25.0.0"
winit = "0.30.10"
