[profile.release]
debug = true

[package]
name = "rust-concurrency"
version = "0.1.0"
edition = "2021"

[dependencies]
bytemuck = { version = "1.21.0", features = ["derive"] }
cgmath = "0.18.0"
fastnoise-lite = "1.1.1"
image = "0.25.5"
log = "0.4.25"
noise = "0.9.0"
pollster = "0.4.0"
pretty_env_logger = "0.5.0"
rand = "0.9.0"
wgpu = "27.0.1"
wgpu_text = "27.0.1"
winit = "0.30.10"
